--- a/styles/projects.css
+++ b/styles/projects.css
@@ -4,8 +4,8 @@
 }
 
 #article-1 h1 {
-    margin: 0;
-    font-size: 12vw;
+    /* margin-left: 10px; */
+    font-size: 5rem;
 }
 
 .projects-main-container {
@@ -14,6 +14,7 @@
     gap: 30px;
     align-items: center;
     margin-top: 10px;
+    
 }
 
 .project-details {
@@ -50,14 +51,16 @@
     color: var(--primary-link);
 }
 
+
 hr {
+    box-sizing: border-box;
+    min-width: 100%;
     color: black;
-    width: 80vw;
-}
+  }
 
 .project-icon {
     display: flex;
-    gap: 15px;
+    gap: 10px;
 }
 
 .project-container img {
@@ -79,7 +82,7 @@ hr {
         flex-direction: row;
         padding: 15px;
         gap: 10px;
-        width: 85vw;
+        width: 75vw;
     }
 
     .project-details {
@@ -102,6 +105,7 @@ hr {
     .project-container {
         align-items: center;
         gap: 40px;
+        width: 80vw;
     }
 
     .project-container img {
